@@ -5,6 +5,9 @@
 
 	* lisp/sawfish/wm/ext/infinite-desktop.jl: update file-header
 
+	* lisp/sawfish/wm/tabs/tab.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl: update file-headers
+
 	* man/news.texi: better description for infinite-desktop.jl
 
 2009-02-17  Christopher Bratusek <zanghar@freenet.de>
